--- a/flask-redis/Dockerfile
+++ b/flask-redis/Dockerfile
@@ -1,4 +1,11 @@
-FROM python:3.5.1-onbuild
+FROM python:3.8-slim-buster
+
+WORKDIR /app
+
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
+
+COPY . .
 
 EXPOSE 8080
 CMD ["uwsgi", "--ini", "conf.ini"]
