--- a/redis-slave-deployment.yaml
+++ b/redis-slave-deployment.yaml
@@ -1,24 +1,24 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-slave
   # these labels can be applied automatically
   # from the labels in the pod template if not set
-  # labels:
-  #   app: redis
-  #   role: slave
-  #   tier: backend
+  labels:
+    app: redis
+    role: slave
+    tier: backend
 spec:
   # this replicas value is default
   # modify it according to your case
   replicas: 2
   # selector can be applied automatically
   # from the labels in the pod template if not set
-  # selector:
-  #   matchLabels:
-  #     app: guestbook
-  #     role: slave
-  #     tier: backend
+  selector:
+    matchLabels:
+      app: guestbook
+      role: slave
+      tier: backend
   template:
     metadata:
       labels:
